--- a/Starter/css/style.css
+++ b/Starter/css/style.css
@@ -1,8 +1,52 @@
-body {
-  background-color:#4b4b4a;
-  font-family: "Josefin Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}}
+body{
+		margin:0;
+	}
+	nav{
+		margin:0;
+	}
+	ul{
+		list-style-type:none;
+		padding:20px;
+		margin:0;
+		background-color: black;
+		text-align: center;
+	}
+	li{
+		display:inline;
+		font-size:1.5em;
+		font-family:Roboto;
+		line-height: 55px;
+	}
+	li a {
+		text-decoration:none;
+		color: lightgrey;
+		padding:20px 40px;
+	}
 
+	li a: hover {
+		background-color: grey;
+		color: white;
+	}
+
+body {
+  background-color:#000000;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size:15px;
+  color: #ffffff
+}
+
+h1 {
+	text-align: center;
+	font-size:50px;
+	margin: 30px;
+	color: #ffffff;
+} 
+
+p {
+  text-align: center;
+  font-size:20px;
+  margin: 30px;
+  color: #ffffff;
+}
